syntax = "proto3";

package com.bht.saigonparking.api.grpc.contact;
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

/* message sent from customer to parking-lot */
/* message will be initialized as an object then stringify into JSON format */
message CustomerMessage {

    enum CustomerMessageType {
        TEXT_MESSAGE = 0;
        BOOKING_REQUEST = 1;
    }

    CustomerMessageType type = 1; /* default TEXT */
    string content = 2; /* message content can be empty */
    int64 customerId = 3; /* sender */
    string customerUsername = 4; /* sender */
    int64 parkingLotId = 5; /* receiver */
    string timestamp = 6; /* format yyyy-MM-dd hh:mm:ss */
}

/* message sent from parking-lot to customer */
/* message will be initialized as an object then stringify into JSON format */
message ParkingLotMessage {

    enum ParkingLotMessageType {
        TEXT_MESSAGE = 0;
        ACCEPT_BOOKING = 1;
        REJECT_BOOKING = 2;
    }

    ParkingLotMessageType type = 1; /* default TEXT */
    string content = 2; /* message content can be empty */
    int64 parkingLotId = 3; /* sender */
    string parkingLotUsername = 4; /* sender */
    int64 customerId = 5; /* receiver */
    string timestamp = 6; /* format yyyy-MM-dd hh:mm:ss */
}